@@ -1,10 +1,11 @@
 <?php
 // DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
-// This file was generated on 2011-08-26 11:40
+// This file was generated on 2011-08-31 14:54
 
 $extensionPath = t3lib_extMgm::extPath('ics_libnavitia');
 $extensionClassesPath = t3lib_extMgm::extPath('ics_libnavitia') . 'Classes/';
 return array(
+	'tx_icslibnavitia_coordinateconverter' => $extensionClassesPath . 'class.tx_icslibnavitia_CoordinateConverter.php',
 	'tx_icslibnavitia_debug' => $extensionClassesPath . 'class.tx_icslibnavitia_Debug.php',
 	'tx_icslibnavitia_address' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Address.php',
 	'tx_icslibnavitia_backward' => $extensionClassesPath . 'DataObjects/class.tx_icslibnavitia_Backward.php',
